--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <script src="processing/processing.js"></script>
  </head>
  <body>
-    <canvas data-processing-sources="Pseudo3DRenderWithRaycast.pde Circle.pde ContactPoint.pde Line.pde Particle.pde Ray.pde Shape.pde"></canvas>
+    <canvas data-processing-sources="Pseudo3DRenderWithRaycast.pde CameraParticle.pde Circle.pde ContactPoint.pde Line.pde Particle.pde Ray.pde Shape.pde"></canvas>
 </body>
 </html>
